--- a/examples/rel/Makefile
+++ b/examples/rel/Makefile
@@ -21,7 +21,6 @@ all:\
   IfcRecursiveReify.uver\
   IfcReificationRegressionTest.uver\
   IfcRules.uver\
-  IfcRulesReify.uver\
   IfcTypechecker.uver\
   Loops.uver\
   Memo.uver\
@@ -43,6 +42,8 @@ all:\
   WhileReify.uver \
   OTP.uver \
   ElGamal.uver
+
+  # IfcRulesReify.uver\
 
 %.fst-in:
 	@echo $(OTHERFLAGS)
