adding a basic extraction test in addition to bootstrapping as part of CI

--- a/src/Makefile
+++ b/src/Makefile
@@ -255,6 +255,7 @@ ifeq ($(OS),Windows_NT)
 endif
 	+make -C ocaml-output
 	+make fstar-ocaml
+	+make -C ../examples/hello ocaml #a basic regression test for extraction
 	+make uregressions interactive-test
 
 # Interactive mode regressions
