examples: tactics: add Canon.fst to makefile

--- a/examples/tactics/Makefile
+++ b/examples/tactics/Makefile
@@ -1,4 +1,4 @@
 FSTAR_HOME=../..
 include ../Makefile.include
 
-all: UserTactics.uver Syntax.uver GRewrite.uver MetaCoq.uver Arith.uver
+all: UserTactics.uver Syntax.uver GRewrite.uver MetaCoq.uver Arith.uver Canon.uver
