put all ulib in fstarlib using ocamlbuild

--- a/ulib/Makefile
+++ b/ulib/Makefile
@@ -82,6 +82,17 @@ wc:
 
 ##
 
-mgen:
+include ml/Makefile.include
+
+REALIZED=$(addsuffix .fst, $(NOEXTRACT_MODULES))
+EXTRACT_ALL=$(filter-out $(REALIZED) $(HYPERSTACK),$(wildcard FStar.*.fst FStar.*.fsti))
+
+mgen: *.fst
 	mkdir -p ml/extracted
-	$(FSTAR) --lax --codegen OCaml --odir ml/extracted --no_extract FStar.List.Tot --no_extract FStar.List.Tot.Base --no_extract FStar.Heap --no_extract FStar.List.Tot.Properties --no_extract FStar.Set FStar.TSet.fst FStar.Map.fst FStar.HyperHeap.fst FStar.HyperStack.fst
+	@echo $(REALIZED)
+	@echo $(EXTRACT_ALL)
+	# What about the files present in HYPERSTACK ?
+	$(FSTAR) --lax --codegen OCaml --odir ml/extracted $(FSTAR_DEFAULT_ARGS) $(EXTRACT_ALL)
+	# $(FSTAR) --lax --codegen OCaml --odir ml/extracted $(FSTAR_DEFAULT_ARGS) --include hyperstack $(HYPERSTACK)
+
+# --no_extract FStar.List.Tot --no_extract FStar.List.Tot.Base --no_extract FStar.Heap --no_extract FStar.List.Tot.Properties --no_extract FStar.Set FStar.TSet.fst FStar.Map.fst FStar.HyperHeap.fst FStar.HyperStack.fst
