--- a/examples/data_structures/Makefile
+++ b/examples/data_structures/Makefile
@@ -7,4 +7,4 @@ uall: BinaryTrees.uver bst RBTree.uver vector
 bst: BinarySearchTree.uver BinarySearchTree0.uver BinarySearchTreeBasic.uver BinarySearchTreeFirst.uver
 
 vector:
-	$(FSTAR) --explicit_deps ArrayRealized.fst Vector.fst
+	$(FSTAR) --explicit_deps FStar.Pervasives.fst ArrayRealized.fst Vector.fst
