--- a/ulib/ml/Makefile.include
+++ b/ulib/ml/Makefile.include
@@ -15,11 +15,9 @@ FSTAR_DEFAULT_ARGS=$(addprefix --no_extract ,$(NOEXTRACT_MODULES))
 ULIB_ML=$(FSTAR_HOME)/ulib/ml
 FSTARLIB_DIR=$(FSTAR_HOME)/bin/fstarlib
 
-# ifeq ($(MEM),HST)
-#      OCAML_DEFAULT_FLAGS=$(FSTARLIB_DIR)/fstarlib.cmxa -I $(FSTARLIB_DIR)
-# else
-#      OCAML_DEFAULT_FLAGS=$(FSTARLIB_DIR)/fstarlib.cmxa -I $(FSTARLIB_DIR)
-# endif
+ifeq ($(MEM),HST)
+	OCAML_DEFAULT_FLAGS=-predicates hyperstack
+endif
 
 OCAMLOPT_=OCAMLPATH="$(FSTAR_HOME)/bin" ocamlfind opt -package fstarlib -linkpkg -g
 OCAMLOPT=$(OCAMLOPT_) $(OCAML_DEFAULT_FLAGS)
