--- a/examples/data_structures/Makefile
+++ b/examples/data_structures/Makefile
@@ -2,7 +2,7 @@ FSTAR_HOME=../..
 include ../Makefile.include
 all: uall
 
-uall: BinaryTrees.uver bst RBTree.uver vector
+uall: BinaryTrees.uver bst RBTree.uver vector BinaryTreesEnumeration.uver
 
 bst: BinarySearchTree.uver BinarySearchTree0.uver BinarySearchTreeBasic.uver BinarySearchTreeFirst.uver
 
