tactics: cases example

--- a/examples/tactics/Makefile
+++ b/examples/tactics/Makefile
@@ -1,4 +1,12 @@
 FSTAR_HOME=../..
 include ../Makefile.include
 
-all: Apply.uver UserTactics.uver Syntax.uver GRewrite.uver MetaCoq.uver Arith.uver Canon.uver Pruning.uver
+all:	Apply.uver		\
+	UserTactics.uver	\
+	Syntax.uver		\
+	GRewrite.uver		\
+	MetaCoq.uver		\
+	Arith.uver		\
+	Canon.uver		\
+	Pruning.uver		\
+	Cases.uver
