--- a/src/syntax/syntax.fsproj
+++ b/src/syntax/syntax.fsproj
@@ -54,6 +54,8 @@
   <ItemGroup>
     <Compile Include="FStar.Syntax.Syntax.fsi" />
     <Compile Include="FStar.Syntax.Syntax.fs" />
+    <Compile Include="FStar.Syntax.Unionfind.fsi" />
+    <Compile Include="FStar.Syntax.Unionfind.fs" />
     <Compile Include="FStar.Syntax.Const.fs" />
     <Compile Include="FStar.Syntax.Subst.fsi" />
     <Compile Include="FStar.Syntax.Subst.fs" />
