modification of the auto-open system + pervasives.native (part1)

--- a/ulib/ml/Makefile.include
+++ b/ulib/ml/Makefile.include
@@ -5,7 +5,7 @@
 
 FSTAR_REALIZED_MODULES=All BaseTypes Char Float Heap Int8 Int16 Int32 Int64 \
   UInt8 UInt16 UInt32 UInt64 Int_Cast IO List List.Tot.Base Option Set ST String HyperHeap HyperStack \
-  HST Buffer Mul
+  HST Buffer Mul Pervasives.Native
 FSTAR_DEFAULT_ARGS=$(addprefix --no_extract FStar.,$(FSTAR_REALIZED_MODULES))
 ULIB_ML=$(FSTAR_HOME)/ulib/ml
 
