parallelized OpenSSL build

--- a/ucontrib/CoreCrypto/ml/Makefile
+++ b/ucontrib/CoreCrypto/ml/Makefile
@@ -81,11 +81,11 @@ libcrypto.a: openssl/libcrypto.a
 
 DLL_OBJ = $(PLATFORM)/platform.cmx CoreCrypto.cmx openssl_stub.o $(DB)/DB.cmx DHDB.cmx
 CoreCrypto.cmxa: #explicitly sequentialize
-	make $(PLATFORM)/platform.cmx
-	make CoreCrypto.cmx
-	make openssl_stub.o
-	make $(DB)/DB.cmx
-	make DHDB.cmx
+	$(MAKE) $(PLATFORM)/platform.cmx
+	$(MAKE) CoreCrypto.cmx
+	$(MAKE) openssl_stub.o
+	$(MAKE) $(DB)/DB.cmx
+	$(MAKE) DHDB.cmx
 	$(OCAMLMKLIB) $(EXTRA_LIBS) $(CCLIBS) -o CoreCrypto $(DLL_OBJ)
 
 DLL_BYTE = $(PLATFORM)/platform.cmo CoreCrypto.cmo openssl_stub.o DHDB.cmo $(DB)/DB.cmo
