tactics: example of synthesis

--- a/examples/tactics/Makefile
+++ b/examples/tactics/Makefile
@@ -13,4 +13,5 @@ all:	Apply.uver		\
 	UserTactics.uver	\
 	Canon.uver		\
 	BinaryTreesEnumeration.uver	\
-	Logic.uver
+	Logic.uver		\
+	Synthesis.uver
