--- a/src/Makefile
+++ b/src/Makefile
@@ -231,6 +231,8 @@ uz:
 ocaml: clean_u_extract_ocaml
 	make prep
 	+make u_extract_all
+	# TODO: remove this after #1072 is fixed
+	sed -i "s/^and unembed_tactic_0.*/and unembed_tactic_0 : 'b. (FStar_Syntax_Syntax.term -> 'b) -> FStar_Syntax_Syntax.term -> 'b FStar_Tactics_Basic.tac =\nfun unembed_b embedded_tac_b ->/" u_ocaml-output/FStar_Tactics_Interpreter.ml
 	cp u_ocaml-output/*.ml ocaml-output/
 
 # Fastest way to refresh the snapshot (if it works)
