tactics: negative tests

--- a/examples/Makefile.include
+++ b/examples/Makefile.include
@@ -13,3 +13,6 @@ endif
 
 %.uver: %.fst
 	$(FSTAR) --verify_module $* $^
+
+%.fail-uver: %.fst
+	(! $(FSTAR) --verify_module $* $^) || (echo "NEGATIVE TEST FAILED!" ; false)
