--- a/ulib/fs/Makefile
+++ b/ulib/fs/Makefile
@@ -1,7 +1,7 @@
 ALL_FILES=prims.fs st.fs all.fs io.fs
 
 all: $(ALL_FILES)
-	 	fsc --mlcompatibility -r ../../bin/FSharp.PowerPack.dll -a $^
+		fsc --mlcompatibility -a $^
 
 clean:
 		rm -f *dll *exe
