Properly fix the Makefile and *do not drop the dependencies*

--- a/ucontrib/CoreCrypto/ml/Makefile
+++ b/ucontrib/CoreCrypto/ml/Makefile
@@ -8,7 +8,7 @@ MARCH?=x86_64
 OCAMLC = ocamlfind c $(INCLUDE) -g -annot
 OCAMLOPT = ocamlfind opt $(INCLUDE) -g -annot
 OCAMLMKLIB = ocamlfind mklib $(INCLUDE)
-OCAMLDEP = ocamlfind dep
+OCAMLDEP = ocamlfind dep -slash
 
 CCOPTS = $(addprefix -ccopt ,-Wall -std=c11 -D__USE_MINGW_ANSI_STDIO -Lopenssl -Iopenssl/include)
 CCLIBS = $(addprefix -cclib ,-lcrypto)
@@ -80,12 +80,7 @@ libcrypto.a: openssl/libcrypto.a
 	cp openssl/libcrypto.a .
 
 DLL_OBJ = $(PLATFORM)/platform.cmx CoreCrypto.cmx openssl_stub.o $(DB)/DB.cmx DHDB.cmx
-CoreCrypto.cmxa: #explicitly sequentialize
-	$(MAKE) $(PLATFORM)/platform.cmx
-	$(MAKE) CoreCrypto.cmx
-	$(MAKE) openssl_stub.o
-	$(MAKE) $(DB)/DB.cmx
-	$(MAKE) DHDB.cmx
+CoreCrypto.cmxa: $(DLL_OBJ)
 	$(OCAMLMKLIB) $(EXTRA_LIBS) $(CCLIBS) -o CoreCrypto $(DLL_OBJ)
 
 DLL_BYTE = $(PLATFORM)/platform.cmo CoreCrypto.cmo openssl_stub.o DHDB.cmo $(DB)/DB.cmo
@@ -106,7 +101,7 @@ clean:
 	rm -f Tests.exe *.[oa] *.so *.cm[ixoa] *.cmxa *.exe *.dll *.annot *~
 
 depend:
-	$(OCAMLDEP) *.ml *.mli > .depend
+	$(OCAMLDEP) -I $(PLATFORM) -I $(DB) *.ml *.mli > .depend
 
 include .depend
 
