--- a/ulib/Makefile
+++ b/ulib/Makefile
@@ -1,6 +1,7 @@
 .PHONY: indent
 
 FSTAR_HOME=..
+include $(FSTAR_HOME)/src/gmake/z3.mk
 include $(FSTAR_HOME)/src/gmake/fstar.mk
 
 FLAKY=FStar.Int31.fst FStar.UInt31.fst FStar.Relational.State.fst
