--- a/examples/crypto/Makefile
+++ b/examples/crypto/Makefile
@@ -58,7 +58,8 @@ verify-%: __force__
 		 --z3rlimit 20 $*
 
 verify_hh-%: __force__
-	$(FSTAR) $(FSTAR_INCLUDE_PATHS) \
+	$(FSTAR) --include $(FSTAR_HOME)/ulib/hyperstack \
+		 $(FSTAR_INCLUDE_PATHS) \
 		 --z3rlimit 20 $*
 
 all: uall
