--- a/ulib/Makefile
+++ b/ulib/Makefile
@@ -3,17 +3,15 @@
 FSTAR_HOME=..
 include $(FSTAR_HOME)/src/gmake/fstar.mk
 
-FLAKY=FStar.Int31.fst FStar.UInt31.fst FStar.Relational.State.fst FStar.StructNG.fst
+FLAKY=FStar.Int31.fst FStar.UInt31.fst FStar.Relational.State.fst
 
-ALL=$(filter-out $(FLAKY) ,$(wildcard FStar.*.fst FStar.*.fsti))
+HYPERSTACK=FStar.Buffer.fst FStar.Buffer.Quantifiers.fst FStar.Monotonic.RRef.fst FStar.Monotonic.Seq.fst FStar.Struct.fst FStar.StructNG.fst
 
-all: $(addsuffix -ver, $(ALL))
+ALL=$(filter-out $(FLAKY) $(HYPERSTACK) $(MATH),$(wildcard FStar.*.fst FStar.*.fsti))
+
+all: $(addsuffix -ver, $(ALL)) st m_rref bufferq struct
 
 indent: $(addsuffix -indent, $(ALL))
-
-%-ver: %
-	$(FSTAR) $^
-	touch $@
 
 %.fst-indent: %.fst
 	$(FSTAR) --indent $^ > $^.indent.fst
