--- a/doc/tutorial/code/Makefile.include
+++ b/doc/tutorial/code/Makefile.include
@@ -4,5 +4,6 @@ ifndef FSTAR_HOME
    $(error "Please define the `FSTAR_HOME` variable before including this makefile.")
 endif
 
+include $(FSTAR_HOME)/src/gmake/z3.mk
 include $(FSTAR_HOME)/src/gmake/fstar.mk
 
