--- a/ulib/ml/Makefile.include
+++ b/ulib/ml/Makefile.include
@@ -3,23 +3,12 @@
 
 # This Makefile assumes that $(FSTAR_HOME) is properly defined.
 
-<<<<<<< HEAD
 FSTAR_REALIZED_MODULES=All BaseTypes Char Float Heap Int8 Int16 Int32 Int64 \
   UInt8 UInt16 UInt32 UInt64 Int_Cast IO List List.Tot.Base Option Set ST String HyperHeap HyperStack \
-  HST Buffer Mul
+  HST Buffer Mul Ghost
+
 FSTAR_DEFAULT_ARGS=$(addprefix --no_extract FStar.,$(FSTAR_REALIZED_MODULES))
-=======
-FSTAR_REALIZED_MODULES=All BaseTypes Buffer Char CommonST Constructive Float Ghost Heap \
-	HyperStack.All HyperStack.ST Int16 Int32 Int63 Int64 Int8 Int_Cast IO \
-	List List.Tot.Base Mul Option Pervasives.Native Set ST String \
-	UInt128 UInt16 UInt32 UInt63 UInt64 UInt8 \
-  Pointer BufferNG
-	# prims is realized by default hence not included in this list
 
-NOEXTRACT_MODULES=$(addprefix FStar., $(FSTAR_REALIZED_MODULES)) prims
-
-FSTAR_DEFAULT_ARGS=$(addprefix --no_extract ,$(NOEXTRACT_MODULES))
->>>>>>> 5f35d6b3e... adding an ML implementation for FStar_Ghost, providing erased a = unit
 ULIB_ML=$(FSTAR_HOME)/ulib/ml
 
 ifeq ($(MEM),HST)
