--- a/ulib/ml/Makefile.include
+++ b/ulib/ml/Makefile.include
@@ -21,7 +21,7 @@ FSTARLIB_DIR=$(FSTAR_HOME)/bin/fstarlib
 # 	OCAML_DEFAULT_FLAGS=-predicates hyperstack
 # endif
 
-OCAMLOPT_=OCAMLPATH="$(FSTAR_HOME)/bin" ocamlfind opt -package fstarlib -linkpkg -g
+OCAMLOPT_=OCAMLPATH="$(FSTAR_HOME)/bin" ocamlfind opt
 OCAMLOPT=$(OCAMLOPT_) $(OCAML_DEFAULT_FLAGS)
-OCAMLC_=OCAMLPATH="$(FSTAR_HOME)/bin" ocamlfind c -package fstarlib -linkpkg -g
+OCAMLC_=OCAMLPATH="$(FSTAR_HOME)/bin" ocamlfind c
 OCAMLC=$(OCAMLC_) $(OCAML_DEFAULT_FLAGS)
