tactics: add negative example

--- a/examples/tactics/neg/Makefile
+++ b/examples/tactics/neg/Makefile
@@ -2,4 +2,5 @@ FSTAR_HOME=../../..
 include ../../Makefile.include
 
 all:	NonTot.fail-uver	\
-	Unresolved.fail-uver
+	Unresolved.fail-uver	\
+	Unbound.fail-uver
