tactics: add set_options test

--- a/examples/tactics/Makefile
+++ b/examples/tactics/Makefile
@@ -15,6 +15,7 @@ all:	Apply.uver		\
 	UserTactics.uver	\
 	Logic.uver		\
 	Synthesis.uver		\
+	Setopts.uver		\
 	Neg.uver		\
 	Caller.uver		\
 	UnitTests.uver		\
