opened universes for top level let recs

--- a/src/Makefile
+++ b/src/Makefile
@@ -225,7 +225,7 @@ u_extract_all: u_extract_misc u_extract_syntax u_extract_parser	u_extract_typech
 
 uz:
 	$(MAKE) prep
-	+$(MAKE) u_extract_uz
+	+$(MAKE) u_extract_syntax
 	cp u_ocaml-output/*.ml ocaml-output/
 	+$(MAKE) -C ocaml-output
 
