rm -rf _build instead of ocamlbuild clean

--- a/ulib/ml/Makefile
+++ b/ulib/ml/Makefile
@@ -44,4 +44,4 @@ clean:
 	rm -f fstarlib.mllib || :
 	rm -f $(ULIB_GEN_DIR)/*
 	rm -f ../.mgen || :
-	-ocamlbuild -clean
+	rm -rf _build # ← ocamlbuild -clean does not work on Cygwin
