--- a/src/tactics/tactics.fsproj
+++ b/src/tactics/tactics.fsproj
@@ -87,6 +87,7 @@
   <ItemGroup>
     <Compile Include="FStar.Tactics.Basic.fs" />
     <Compile Include="FStar.Tactics.Embedding.fs" />
+    <Compile Include="FStar.Tactics.Native.fs" />
     <Compile Include="FStar.Tactics.Interpreter.fsi" />
     <Compile Include="FStar.Tactics.Interpreter.fs" />
     <Compile Include="FStar.Tactics.Load.fsi" />
