examples: native tactics: some makefile fixes

--- a/examples/native_tactics/Makefile
+++ b/examples/native_tactics/Makefile
@@ -1,11 +1,12 @@
 FSTAR_HOME=../..
 OCAML_OUTPUT=$(FSTAR_HOME)/src/ocaml-output
 INCLUDES=$(addprefix -I $(OCAML_OUTPUT)/_build/, src/tactics/ml ulib/ml src/ocaml-output/ src/basic/ml)
+FSTAR=$(FSTAR_HOME)/bin/fstar.exe
 
 .PRECIOUS: %.ml
 
 %.ml: %.fst
-	fstar $(OTHERFLAGS) --codegen OCaml $< --extract_module $(patsubst %.fst,%,$<)
+	$(FSTAR) $(OTHERFLAGS) --codegen OCaml $< --extract_module $(patsubst %.fst,%,$<)
 	cat $(patsubst %.fst,%,$<).fixup >> $@
 
 %.cmxs: %.ml
@@ -14,7 +15,7 @@ INCLUDES=$(addprefix -I $(OCAML_OUTPUT)/_build/, src/tactics/ml ulib/ml src/ocam
 .PHONY: test
 
 %.test: %.cmxs %.Test.fst 
-	fstar --load $^
+	$(FSTAR) --load $^
 
 clean:
 	rm -f *.ml *.cm*
